# dlna-dmr

./: .jiu.toml  Cargo.toml  README.md
.github/workflows/: release.yml
src/: defaults.rs  extractor.rs  http.rs  lib.rs  main.rs  ssdp.rs
src/template/: DeviceSpec.tmpl.xml
src/xml/: DeviceSpec.tmpl.xml  RenderingControl.xml  av_transport.rs  mod.rs  rendering_control.rs
tests/: integration_test.rs  test-config.toml
tests/AVTransport/: GetMediaInfo.xml  GetTransportInfo.xml  Play.xml  Seek.xml  SetAVTransportURI.xml  SetNextAVTransportURI.xml
tests/RenderingControl/: GetMute.xml  GetVolume.xml  ListPresets.xml  SelectPreset.xml  SetMute.xml  SetVolume.xml
