[package]
name = "dlna-dmr"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "DLMA Digital Media Renderer"
keywords = []
categories = []
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/dlna-dmr"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]
actix-web = "4.11.0"
local-ip-address = "0.6.5"
quick-xml = "0.23.1"
tokio = { version = "1.45.1", features = ["signal", "rt"] }
upnp-rs = "0.2.0"
uuid = { version = "1.17.0", features = ["v4"] }

[[bin]]
name = "dlna-dmr"
required-features = ["cli"]

[features]
cli = []

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
