[package]
name = "dlna-dmr"
version = "0.1.2"
edition = "2024"
readme = "README.md"
description = "A dummy DLNA Digital Media Renderer"
keywords = ["DLNA", "DMR", "upnp"]
categories = ["multimedia", "security", "simulation", "web-programming"]
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/dlna-dmr"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "std", "clock", "now"] }
ctrlc = { version = "3.4.7", optional = true }
env_logger = { version = "0.11.8", optional = true }
local-ip-address = "0.6.5"
log = "0.4.27"
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
socket2 = "0.5.10"
tiny_http = "0.12.0"
toml = { version = "0.8.22", optional = true, default-features = false, features = ["parse"] }
uuid = { version = "1.17.0", features = ["v4"] }

[[bin]]
name = "dlna-dmr"
required-features = ["cli"]

[features]
cli = ["ctrlc", "env_logger", "toml"]
ctrlc = ["dep:ctrlc"]

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
